Addressed FindBugs warnings.